--- a/opera.html
+++ b/opera.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> OPERA !!!</title>
+        <link rel="stylesheet" href="gs.css">
     </head>
     <body>
         <h1>Prathyusha Maram Productions LTD</h1>
