--- a/opera.html
+++ b/opera.html
@@ -76,5 +76,22 @@
                  
 
     </pre>
+    <table>
+        <tr>
+            <th>Character</th>
+            <th>Actor</th>
+            <th>Offer</th>
+        </tr>
+        <tr>
+            <td>CAPT</td>
+            <td>Lily Allen</td>
+            <td>$5 million</td>
+        </tr>
+        <tr>
+            <td>SIR JOSEPH</td>
+            <td>Steve Harvey</td>
+            <td>$10 million</td>
+        </tr>
+    </table>
     </body>
 </html>
