--- a/opera.html
+++ b/opera.html
@@ -94,5 +94,16 @@
         </tr>
     </table>
     <a href="opera2.html">Opera2</a>
+    <img src="bonus.jpg" width ="300" height="300">
+    <ul class="navbar-horizontal">
+        <li><a href="opera.html">opera</a></li>
+        <li><a href="opera2.html">opera2</a></li>
+
+    </ul>
+    <br>
+        <p class="icon">
+            <a href="opera2.html"><img src="navigate.png" style="width: 40px;height: 40px;"></a>
+        </p>
+
     </body>
 </html>
